OAS: fix discriminator field for Artifact
